# adi-analytics-ingestion

./: CLAUDE.md  Dockerfile
core/: Cargo.toml
http/: Cargo.toml
http/src/: main.rs
