[package]
name = "analytics-ingestion-http"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "HTTP server for ADI Analytics Ingestion"

[[bin]]
name = "analytics-ingestion"
path = "src/main.rs"

[dependencies]
analytics-ingestion-core = { path = "../core" }

# Analytics core (for event types)
lib-analytics-core = { path = "../../lib/lib-analytics-core" }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Generated API support
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# HTTP utilities
lib-http-common = { path = "../../lib/lib-http-common" }

# Logging
lib-logging-core = { path = "../../lib/lib-logging-core", features = ["axum-08-compat"] }
